0.0.0.11
===========
+ Status support (global or by protocol)

0.0.0.10
===========
+ Multiprotocol options

0.0.0.9
===========
Patch by Tioduke
{
	* Use the right protoname for treating nudge as event
	* Take care of the message dialog (open or not) in treating nudge as event
	+ Registration in dbeditor ++
}
* Be aware of metacontact when sendig/receiving nudge (history).

0.0.0.8
===========
+ Shake options are now saved in DB
! some code rewrite in order to easily change the algo of shaking
! Patch by Tioduke for icons (non support of icolib)
+ Option to treat nudge as a message.
! Recieved -> received.

0.0.0.7
===========
! Wrong service call

0.0.0.6
===========
* Change the return value for trigger functions
! Bug sound file name was not set (thx TioDuke)
+ Add default Sound

0.0.0.5
===========
! Trigger plugin bug fix 

0.0.0.4
============
+ Icolib support
! Option redesign to fix visual bug
+ First step in option page to by protocol option
+ Settings are now saved in DB :-)


0.0.0.3
============
* Some mod in option page.
+ Support for trigger plugin from pboon.
* Forced beta version in updater.